[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpuhunt"
authors = [
    { name = "dstack GmbH" },
]
description = "A catalog of GPU pricing for different cloud providers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]
keywords = ["gpu", "cloud", "pricing"]
dynamic = ["version"]
dependencies = [
    "requests",
    "typing-extensions"
]

[project.urls]
"GitHub" = "https://github.com/dstackai/gpuhunt"
"Issues" = "https://github.com/dstackai/gpuhunt/issues"

[project.optional-dependencies]
aws = [
    "boto3"
]
azure = [
    "azure-mgmt-compute",
    "azure-identity"
]
gcp = [
    "google-cloud-billing",
    "google-cloud-compute",
    "google-cloud-tpu",
]
# Nebius requires Python 3.10. On 3.9:
# `pip install gpuhunt[nebius]` is expected to fail
# `pip install gpuhunt[all]` is expected to ignore Nebius
nebius = [
    "nebius>=0.2.40,<0.4",
]
maybe_nebius = [
    'nebius>=0.2.40,<0.4; python_version>="3.10"',
]
oci = [
    "oci",
    "pydantic>=1.10.10,<2.0.0",
]
verda = [
    'verda',
]
maybe_verda = [
    'verda; python_version>="3.10"',
]
all = ["gpuhunt[aws,azure,maybe_verda,gcp,maybe_nebius,oci]"]
dev = [
    "pre-commit",
    "pytest~=7.0",
    "pytest-mock",
    "ruff==0.5.3",  # Should match .pre-commit-config.yaml
    "requests-mock",
]

[tool.setuptools.dynamic]
version = {attr = "gpuhunt.version.__version__"}

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ['E', 'F', 'I' ,'Q', 'W', 'UP', 'PGH', 'FLY', 'S113']
ignore = [
  'E501',
  'E712',
]

[tool.ruff.lint.isort]
known-first-party = ["gpuhunt"]
